<resources>
    <string name="app_name">AtlaS</string>
    <string name="login">INICIE SESIÓN</string>
    <string name="register">REGÍSTRESE</string>
    <string name="userEmail">Ingrese su correo electrónico.</string>
    <string name="password">Ingrese su contraseña.</string>
    <string name="pass_register">Ingrese una contraseña...</string>
    <string name="pass2">Repita la contraseña...</string>
    <string name="continu">CONTINÚE</string>
    <string name="cancel">CANCELAR</string>
    <string name="lastname">Ingrese su Apellido...</string>
    <string name="pass">Ingrese una contraseña...</string>
    <string name="countrie">Seleccione su país de nacimiento...</string>
    <string name="email">Ingrese su correo electrónico...</string>
    <string name="name">Ingrese su nombre...</string>
    <string name="phone">Ingrese su teléfono...</string>
    <string name="lugar">Seleccione su país de nacimiento...</string>
    <string name="fecha_nacimiento">Seleccione su fecha de nacimiento</string>
    <string name="registrar">Registrar.</string>
    <string name="checkbox_men">Hombre</string>
    <string name="checkbox_women">Mujer</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save">Guardar</string>
    <string name="genero">Genero:</string>
    <string name="fecha_nacimiento_perfil">Fecha de nacimiento:</string>
    <string name="menu_paises">Países</string>
    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="facebook_app_id">671402080347613</string>
    <string name="fb_login_protocol_scheme">fb671402080347613</string>
    <string name="title_activity_country">CountryActivity</string>
    <string name="tab_text_1">Características</string>
    <string name="tab_text_2">Otras Características</string>
    <string name="tab_text_3">Geolocalización</string>
    <string name="gentilicio">Gentilicio:</string>
    <string name="area">Area:</string>
    <string name="poblacion">Población:</string>
    <string name="zona">Zona horaria:</string>
    <string name="gini">Indice desigualdad: </string>
    <string name="Nombre_oficial">Nombre Oficial</string>
    <string name="top_level_domain">Dominio Internet</string>
    <string name="alpha_code">Códigos del País</string>
    <string name="limites">Limites</string>
    <string name="lenguajes">Idiomas hablados</string>
    <string name="currencies">Monedas</string>
    <string name="regional_bloc">Alianzas Regionales</string>
    <string name="calling_code">Código telefónico</string>
    <string name="loading">Loading...</string>
</resources>

