<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_grupo1_fondo"
    tools:context="com.sebastian.osorios.udea.atlas.Fragments.OthersFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="7dp"
                android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                            <TextView
                                android:id="@+id/title_borders"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="35dp"
                                android:gravity="center"
                                android:text="@string/limites"/>
                            <TextView
                                android:id="@+id/limites"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textColor="@color/white"
                                android:textSize="20dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/white"
                                android:text="@string/lenguajes"
                                android:textSize="35dp"/>
                            <TextView
                                android:id="@+id/idiomas"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textColor="@color/white"
                                android:textSize="20dp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/currencies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/currencies"
                        android:textSize="35dp" />
                    <TextView
                        android:id="@+id/currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/title_regional_bloc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="7dp"
                        android:textColor="@color/white"
                        android:text="@string/regional_bloc"
                        android:textSize="30dp"/>
                    <LinearLayout
                        android:id="@+id/layout_regional_bloc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                    </LinearLayout>

                    <TextView
                        android:id="@+id/title_top_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/top_level_domain"
                        android:textSize="30dp"/>
                    <TextView
                        android:id="@+id/top_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="30dp"/>
                     <TextView
                         android:id="@+id/title_calling"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:textColor="@color/white"
                         android:text="@string/calling_code"
                         android:textSize="30dp"/>

                    <LinearLayout
                        android:id="@+id/linear_calling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"/>
                    <TextView
                        android:id="@+id/title_country_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/alpha_code"
                        android:textSize="30dp"/>
                    <TextView
                        android:id="@+id/code_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="30dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>