<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/drawable_grupo1_fondo"
    tools:context="com.sebastian.osorios.udea.atlas.Activitys.LandingActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="299dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    app:srcCompat="@drawable/atls" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLyaoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/login"
                    android:background="@drawable/border_buttons"/>


                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:background="@drawable/border_buttons"/>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_with_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:ignore="MissingConstraints"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/huella"
                    android:layout_marginTop="10dp"
                    android:layout_width="85dp"
                    android:layout_height="95dp"
                    android:clickable="true"
                    android:onClick="loginFingerprint"
                    android:src="@drawable/huella"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLyaout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/userLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userEmail"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/passLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <ImageView
                        android:id="@+id/seePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:srcCompat="@drawable/drawable_grupo1_see" />
                    <ImageView
                        android:id="@+id/NoseePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/drawable_grupo1_dontsee" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="invisible">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/border_buttons"
                    android:padding="5dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/continu"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_buttons"
                    android:padding="5dp"
                    android:onClick="continueLogin"
                    android:text="@string/continu" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>