<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/atls"
    tools:context=".RegisterInAtlas">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="299dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/a" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/t" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/l" />
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/a" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/s" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="55dp"
                android:padding="15dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/userRegis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passRegis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailRegis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/countrie"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerCountries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tooltipText="@string/countrie" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/saveRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrar"
                    android:background="@drawable/border_buttons"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>